--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-﻿fastapi==0.111.0
+fastapi==0.111.0
 uvicorn==0.30.1
 scikit-learn==1.4.2
 joblib==1.4.2
 pydantic==2.7.1
 pandas==2.2.2
 xgboost==1.7.6
+prometheus-fastapi-instrumentator==6.0.0
