--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,20 @@
-version: "3.8"
-
 services:
   churn_api:
-    build: .
     image: mohamedatef:latest
     container_name: churn_api
     ports:
       - "8000:8000"
 
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus:v2.58.0    
     container_name: prometheus
-    ports:
-      - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
-    depends_on:
-      - churn_api
+    ports:
+      - "9090:9090"
 
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:10.2.1      
     container_name: grafana
     ports:
       - "3000:3000"
-    depends_on:
-      - prometheus
