--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,25 @@
 services:
   churn_api:
+    build: .
     image: mohamedatef:latest
     container_name: churn_api
     ports:
       - "8000:8000"
 
   prometheus:
-    image: prom/prometheus:v2.58.0    
+    image: prom/prometheus:latest
     container_name: prometheus
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
     ports:
       - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    depends_on:
+      - churn_api
 
   grafana:
-    image: grafana/grafana:10.2.1      
+    image: grafana/grafana:latest
     container_name: grafana
     ports:
       - "3000:3000"
+    depends_on:
+      - prometheus
