--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ joblib==1.4.2
 pydantic==2.7.1
 pandas==2.2.2
 xgboost==1.7.6
-prometheus-fastapi-instrumentator>=6.0.0
+prometheus-fastapi-instrumentator
