--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,10 @@ services:
     image: locustio/locust
     # mount your test script
     volumes:
-      - ./locustfile.py:/mnt/locust/locustfile.py
-    # override the command to point at that file, and tell it where the API is
+      - ./locustfile.py:/locustfile.py
     command: >
-      -f /mnt/locust/locustfile.py
+      -f /locustfile.py
       --host http://churn_api:8000
-    # map UI port 8089 → host 8007
     ports:
       - "8007:8089"
     depends_on:
